Adding python to create a project

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -28,7 +28,11 @@ RUN find ./web -name "*.html" -o -name "*.css" | tar -cf pack -T -
 ######## Start a new stage from scratch #######
 FROM ubuntu:bionic
 
+RUN apt-get install graphviz
+
 WORKDIR /root/
+
+
 
 RUN mkdir db
 
